--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<nav>
       <ul>
         <li><a href="/">Home</a></li>
-	    <li><a href="/about">About</a></li>
+	    <li><a href="https://github.com/philippe-grenet">About</a></li>
       </ul>
 	</nav>
 	<div class="container">
